# cu-schedule

./: .dockerignore  .gitignore  Dockerfile  NOTICE.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: ci.yml
data/: README.md
data/2026-27/: ACPY.json  ANIC.json  ARCH.json  ARTS.json  ASEI.json  BBMS.json  BCHE.json  BCME.json  BECE.json  BEHM.json  BEST.json  BIOL.json  BIOS.json  BMBL.json  BMED.json  BUDS.json  CDAS.json  CENG.json  CGEN.json  CHEM.json  CHLL.json  CHLT.json  CHPR.json  CHPY.json  CLCC.json  CLCE.json  CMBI.json  COMM.json  COOP.json  CSCI.json  CULS.json  CUMT.json  CURE.json  CVSM.json  DBAC.json  DOTE.json  DSPS.json  ECON.json  EESC.json  ELED.json  (+96 more)
data/courses/: manifest.json
data/programs/: index.json  programs.json
deploy/: entrypoint.sh  nginx.conf
docs/: api-design.md  architecture-review.md  deployment.md  programs-data.md  schema.md
public/: llms.txt  manifest.webmanifest  robots.txt  sitemap.xml
public/data/: manifest.json  programs.json
scripts/: audit-whitelist.json  audit_data.mts  audit_programs.mts  build_bundles.mts  build_term_bundles.py  check_requirements.mts  cuhk_scraper.py  data_utils.py  dump_req_audit.mts  gen-font-inline.mjs  i18n-extract.mjs  i18n-gen.mjs  i18n-wrap.workflow.mjs  parse_programs.py  scrape_all_subjects.py  scrape_programs.py
scripts/tests/: test_cuhk_scraper.py  test_data_utils.py
server/: index.mjs
src/: App.tsx  main.tsx  styles.css
src/components/: CodeInput.tsx  (+13 more)
(+730 files in other folders)
